--- a/practice.html
+++ b/practice.html
@@ -1,471 +1,154 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>テーブル管理</title>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Tailwind CSS CDN -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
+  <!-- 背景用グラデーション -->
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(to right, #e0f7fa, #ffffff);
-      padding: 20px;
-    }
-
-header {
-  position: relative;
-  background-color: #00796b;
-  padding: 10px 20px;
-  color: white;
-  font-weight: bold;
-  user-select: none;
-  display: flex;
-  align-items: center;
-}
-
-.drawer-toggle-label {
-  display: inline-block;
-  cursor: pointer;
-  width: 30px;
-  height: 24px;
-  position: relative;
-  margin-right: 10px;
-}
-
-.drawer-toggle-label span {
-  display: block;
-  height: 4px;
-  background: white;
-  margin-bottom: 5px;
-  border-radius: 2px;
-  transition: 0.3s;
-}
-
-.drawer-menu {
-  position: fixed;
-  top: 0;
-  left: -250px;
-  width: 220px;
-  height: 100%;
-  background: #004d40;
-  padding-top: 60px;
-  transition: left 0.3s ease;
-  z-index: 1000;
-}
-
-.drawer-menu ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.drawer-menu li {
-  padding: 15px 20px;
-}
-
-.drawer-menu li a {
-  color: white;
-  text-decoration: none;
-  font-weight: normal;
-  display: block;
-}
-
-.drawer-menu li a:hover {
-  background-color: #00695c;
-  border-radius: 4px;
-}
-
-.drawer-hidden {
-  display: none;
-}
-
-.drawer-hidden:checked ~ .drawer-menu {
-  left: 0;
-}
-
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(1) {
-  transform: rotate(45deg);
-  top: 8px;
-  position: relative;
-}
-
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(2) {
-  opacity: 0;
-}
-
-.drawer-hidden:checked + .drawer-toggle-label span:nth-child(3) {
-  transform: rotate(-45deg);
-  top: -8px;
-  position: relative;
-}
-
-    h1 {
-      text-align: center;
-    }
-    .table-list, .usage-logs {
-      margin-top: 30px;
-    }
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      margin-bottom: 40px;
-    }
-    th, td {
-      border: 1px solid #aaa;
-      padding: 10px;
-      text-align: center;
-    }
-    th {
-      background-color: #00796b;
-      color: white;
-    }
-    .occupied {
-      background-color: #ffccbc;
-    }
-    .vacant {
-      background-color: #c8e6c9;
-    }
-    /* 検索フォームのスタイル */
-    .search-filters {
-      margin-bottom: 10px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-    }
-    .search-filters label {
-      font-weight: bold;
-      margin-right: 5px;
-    }
-    .search-filters input {
-      padding: 5px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      min-width: 120px;
+      background: linear-gradient(to right, #e0f7fa, #fff3e0);
     }
   </style>
 </head>
-<body>
-<header>
-  <input type="checkbox" id="drawerCheckbox" class="drawer-hidden">
-  <label for="drawerCheckbox" class="drawer-toggle-label" aria-label="メニューを開く">
-    <span></span>
-    <span></span>
-    <span></span>
-  </label>
-  <h1 style="display:inline-block; margin-left: 20px;">テーブル管理画面</h1>
-  <nav class="drawer-menu">
-    <ul>
-      <li><a href="index.html">ホーム</a></li>
-      <li><a href="map.html">店舗マップ</a></li>
-      <li><a href="histogram.html">混雑履歴</a></li>
-      <li><a href="table_management.html">テーブル管理</a></li>
-    </ul>
-  </nav>
-</header>
+<body class="min-h-screen">
 
+  <!-- ハンバーガーメニュー -->
+  <header class="bg-orange-400 text-white p-4 flex justify-between items-center">
+    <h1 class="text-xl font-bold">テーブル管理</h1>
+    <button id="menuButton" class="focus:outline-none">
+      <svg class="w-6 h-6 fill-current" viewBox="0 0 20 20"><path d="M0 3h20v2H0zM0 9h20v2H0zM0 15h20v2H0z"/></svg>
+    </button>
+  </header>
 
+  <!-- ドロワーメニュー -->
+  <aside id="drawerMenu" class="fixed top-0 left-0 w-64 bg-white h-full shadow transform -translate-x-full transition-transform duration-300 z-50">
+    <nav class="p-4">
+      <ul>
+        <li class="mb-2"><a href="index.html" class="text-blue-600">ホーム</a></li>
+        <li class="mb-2"><a href="map.html" class="text-blue-600">マップ</a></li>
+        <li class="mb-2"><a href="table.html" class="font-bold">テーブル管理</a></li>
+      </ul>
+    </nav>
+  </aside>
 
+  <!-- コンテンツ -->
+  <main class="p-4 mt-4 space-y-6">
+    <!-- テーブル状態 -->
+    <section>
+      <h2 class="text-xl font-bold mb-2">現在のテーブル状況</h2>
+      <div id="tableList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    </section>
 
-    <h1>テーブル管理画面</h1>
+    <!-- 使用履歴 -->
+    <section>
+      <h2 class="text-xl font-bold mb-2">使用履歴</h2>
+      <div id="historyList" class="space-y-2"></div>
+    </section>
+  </main>
 
-
-  <div class="table-list">
-    <h2>テーブル一覧</h2>
-    <table id="tableStatusTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>状態</th>
-          <th>使用開始時刻</th>
-          <th>利用時間（分）</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-  <div class="usage-logs">
-    <h2>利用履歴</h2>
-
-    <!-- 検索フォーム追加 -->
-    <div class="search-filters">
-      <div>
-        <label for="searchTableId">テーブルID:</label>
-        <input type="text" id="searchTableId" placeholder="テーブルIDを入力" />
-      </div>
-      <div>
-        <label for="searchDevice">デバイスタイプ（機種）:</label>
-        <input type="text" id="searchDevice" placeholder="例: iPhone" />
-      </div>
-      <div>
-        <label for="searchOSBrowser">OS / ブラウザ:</label>
-        <input type="text" id="searchOSBrowser" placeholder="例: iOS / Safari" />
-      </div>
-      <div>
-        <label for="searchStartDate">利用開始(YYYY-MM-DD):</label>
-        <input type="date" id="searchStartDate" />
-      </div>
-      <div>
-        <label for="searchEndDate">利用終了(YYYY-MM-DD):</label>
-        <input type="date" id="searchEndDate" />
-      </div>
-      <div>
-        <button id="clearFilters">クリア</button>
-      </div>
-    </div>
-
-    <table id="usageLogsTable">
-      <thead>
-        <tr>
-          <th>テーブルID</th>
-          <th>デバイスタイプ（機種）</th>
-          <th>OS / ブラウザ</th>
-          <th>利用開始</th>
-          <th>利用終了</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
-  </div>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyAJf3Z2Mg_J1uZ0kPa-sjcnLxs3BG4l5Ag",
-    authDomain: "qr-visitor-log.firebaseapp.com",
-    projectId: "qr-visitor-log",
-    storageBucket: "qr-visitor-log.appspot.com",
-    messagingSenderId: "304250341939",
-    appId: "1:304250341939:web:b8d5b946590d1f852cf146"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-
-  // グローバル変数でテーブル状態を保持
-  let tableStatus = {};
-
-
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    tableStatus = {};
-
-    snapshot.forEach(doc => {
-      const data = doc.data();
-      const tableId = data.table;
-      const deviceId = data.device;
-      const timestamp = new Date(data.timestamp);
-      const type = data.type;
-
-      if (!tableStatus[tableId]) {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
-
-      if (type === "enter") {
-        tableStatus[tableId] = { status: "occupied", startTime: timestamp, deviceId };
-      } else if (type === "exit" && tableStatus[tableId].status === "occupied") {
-        tableStatus[tableId] = { status: "vacant", startTime: null, deviceId: null };
-      }
+  <!-- ドロワーの開閉処理 -->
+  <script>
+    const menuButton = document.getElementById('menuButton');
+    const drawerMenu = document.getElementById('drawerMenu');
+    menuButton.addEventListener('click', () => {
+      drawerMenu.classList.toggle('-translate-x-full');
     });
+  </script>
 
-    const tbody = document.querySelector("#tableStatusTable tbody");
-    tbody.innerHTML = "";
-
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      const tr = document.createElement("tr");
-      tr.dataset.tableId = tableId;
-      tr.className = info.status === "occupied" ? "occupied" : "vacant";
-
-      const duration = info.status === "occupied" && info.startTime
-        ? Math.floor((new Date() - info.startTime) / 60000)
-        : "-";
-
-      tr.innerHTML = `
-        <td>${tableId}</td>
-        <td>${info.status === "occupied" ? "使用中" : "空席"}</td>
-        <td>${info.startTime ? info.startTime.toLocaleString() : "-"}</td>
-        <td class="usage-time">${duration}</td>
-      `;
-      tbody.appendChild(tr);
-    }
-  });
-
-  // 利用時間を1分ごとに更新
-  function updateUsageTime() {
-    const now = new Date();
-    for (const [tableId, info] of Object.entries(tableStatus)) {
-      if (info.status === "occupied" && info.startTime) {
-        const duration = Math.floor((now - info.startTime) / 60000);
-        const row = document.querySelector(`#tableStatusTable tbody tr[data-table-id="${tableId}"]`);
-        if (row) {
-          row.querySelector(".usage-time").textContent = duration;
-        }
-      }
-    }
-  }
-  setInterval(updateUsageTime, 60000);
-
-  function parseDeviceInfo(ua) {
-    ua = ua.toLowerCase();
-    let device = "不明";
-    let os = "不明";
-    let browser = "不明";
-
-    if (ua.includes("iphone")) {
-      device = guessIphoneModel(ua);
-      os = "iOS";
-    } else if (ua.includes("ipad")) {
-      device = "iPad";
-      os = "iOS";
-    } else if (ua.includes("android")) {
-      device = guessAndroidModel(ua);
-      os = "Android";
-    } else if (ua.includes("windows")) {
-      device = "Windows PC";
-      os = "Windows";
-    } else if (ua.includes("macintosh")) {
-      device = "Mac";
-      os = "macOS";
-    }
-
-    if (ua.includes("chrome")) {
-      browser = "Chrome";
-    } else if (ua.includes("safari") && !ua.includes("chrome")) {
-      browser = "Safari";
-    } else if (ua.includes("firefox")) {
-      browser = "Firefox";
-    } else if (ua.includes("edg")) {
-      browser = "Edge";
-    }
-
-    return {
-      device,
-      os,
-      browser
+  <!-- Firebaseとデータ処理 -->
+  <script>
+    // Firebase初期化
+    const firebaseConfig = {
+      // あなたのFirebase設定情報をここに
     };
-  }
+    firebase.initializeApp(firebaseConfig);
+    const db = firebase.firestore();
 
-  function guessIphoneModel(ua) {
-    if (ua.includes("iphone os 16")) return "iPhone 14系";
-    if (ua.includes("iphone os 15")) return "iPhone 13系";
-    if (ua.includes("iphone os 14")) return "iPhone 12系";
-    if (ua.includes("iphone os 13")) return "iPhone 11系";
-    return "iPhone端末";
-  }
+    // ログを取得してテーブル状態と履歴を表示
+    const tableListEl = document.getElementById('tableList');
+    const historyListEl = document.getElementById('historyList');
 
-  function guessAndroidModel(ua) {
-    const match = ua.match(/android.*build\/([a-z0-9\-]+)/i);
-    if (match && match[1]) {
-      return `Android (${match[1]})`;
-    }
-    return "Android端末";
-  }
+    const latestEnterLogs = {};  // 最新の入店ログを追跡
+    const tableHistories = {};   // 各テーブルの履歴
 
+    db.collection("logs").orderBy("timestamp", "desc").onSnapshot(snapshot => {
+      latestEnterLogs = {};
+      tableHistories = {};
 
-  let allLogs = []; // 全ログ保存用
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const { table, type, timestamp, device } = data;
 
-  // 検索フォームの各要素を取得
-  const searchTableId = document.getElementById("searchTableId");
-  const searchDevice = document.getElementById("searchDevice");
-  const searchOSBrowser = document.getElementById("searchOSBrowser");
-  const searchStartDate = document.getElementById("searchStartDate");
-  const searchEndDate = document.getElementById("searchEndDate");
-  const clearFilters = document.getElementById("clearFilters");
+        // 使用履歴保存
+        if (!tableHistories[table]) tableHistories[table] = [];
+        tableHistories[table].push({ type, timestamp, device });
 
-  function filterAndDisplayLogs() {
-    const tableIdFilter = searchTableId.value.trim().toLowerCase();
-    const deviceFilter = searchDevice.value.trim().toLowerCase();
-    const osBrowserFilter = searchOSBrowser.value.trim().toLowerCase();
-    const startDateFilter = searchStartDate.value; // yyyy-mm-dd
-    const endDateFilter = searchEndDate.value; // yyyy-mm-dd
-
-    const tbody = document.querySelector("#usageLogsTable tbody");
-    tbody.innerHTML = "";
-
-    // table_deviceごとにまとめるロジックは元と同じ
-    const usageMap = {};
-
-    allLogs.forEach(log => {
-      const key = `${log.table}_${log.device}`;
-      const time = new Date(log.timestamp);
-
-      if (!usageMap[key]) usageMap[key] = { table: log.table, device: log.device };
-
-      if (log.type === "enter") {
-        usageMap[key].start = time;
-      } else if (log.type === "exit") {
-        usageMap[key].end = time;
-      }
-    });
-
-    Object.values(usageMap)
-      .filter(log => log.start && log.end)
-      .filter(log => {
-        // テーブルIDフィルター
-        if (tableIdFilter && !log.table.toLowerCase().includes(tableIdFilter)) return false;
-
-        // デバイスタイプ（機種）フィルター
-        if (deviceFilter) {
-          const deviceName = parseDeviceInfo(log.device).device.toLowerCase();
-          if (!deviceName.includes(deviceFilter)) return false;
+        // 最新の入店情報だけ保存
+        if (type === 'enter' && !latestEnterLogs[table]) {
+          latestEnterLogs[table] = new Date(timestamp);
+        } else if (type === 'exit') {
+          delete latestEnterLogs[table]; // 退店したら状態解除
         }
-
-        // OS/ブラウザフィルター
-        if (osBrowserFilter) {
-          const info = parseDeviceInfo(log.device);
-          const osBrowser = (info.os + " / " + info.browser).toLowerCase();
-          if (!osBrowser.includes(osBrowserFilter)) return false;
-        }
-
-        // 利用開始日付フィルター
-        if (startDateFilter) {
-          const startDate = new Date(startDateFilter + "T00:00:00");
-          if (log.start < startDate) return false;
-        }
-
-        // 利用終了日付フィルター
-        if (endDateFilter) {
-          const endDate = new Date(endDateFilter + "T23:59:59");
-          if (log.end > endDate) return false;
-        }
-
-        return true;
-      })
-      .forEach(log => {
-        const tr = document.createElement("tr");
-        const deviceInfo = parseDeviceInfo(log.device);
-        tr.innerHTML = `
-          <td>${log.table}</td>
-          <td>${deviceInfo.device}</td>
-          <td>${deviceInfo.os} / ${deviceInfo.browser}</td>
-          <td>${log.start.toLocaleString()}</td>
-          <td>${log.end.toLocaleString()}</td>
-        `;
-        tbody.appendChild(tr);
       });
-  }
 
-  clearFilters.addEventListener("click", () => {
-    searchTableId.value = "";
-    searchDevice.value = "";
-    searchOSBrowser.value = "";
-    searchStartDate.value = "";
-    searchEndDate.value = "";
-    filterAndDisplayLogs();
-  });
-
-  [searchTableId, searchDevice, searchOSBrowser, searchStartDate, searchEndDate].forEach(input => {
-    input.addEventListener("input", filterAndDisplayLogs);
-  });
-
-  // ログのリアルタイム取得と表示更新
-  db.collection("logs").orderBy("timestamp").onSnapshot(snapshot => {
-    allLogs = [];
-    snapshot.forEach(doc => {
-      allLogs.push(doc.data());
+      // 状況表示更新
+      renderTableStatus();
+      renderHistory();
     });
-    filterAndDisplayLogs();
-  });
 
-</script>
+    function renderTableStatus() {
+      tableListEl.innerHTML = '';
+      const tableIDs = Object.keys(tableHistories).sort();
+
+      tableIDs.forEach(table => {
+        const status = latestEnterLogs[table] ? "使用中" : "空き";
+        const startTime = latestEnterLogs[table];
+        let timeInfo = '';
+
+        if (startTime) {
+          const now = new Date();
+          const diffMs = now - startTime;
+          const minutes = Math.floor(diffMs / 60000);
+          timeInfo = `（経過: ${minutes}分）`;
+        }
+
+        const card = `
+          <div class="p-4 rounded-lg shadow bg-white">
+            <h3 class="font-bold text-lg">テーブル ${table}</h3>
+            <p class="${status === '使用中' ? 'text-red-500' : 'text-green-500'} font-semibold">${status} ${timeInfo}</p>
+          </div>
+        `;
+        tableListEl.innerHTML += card;
+      });
+    }
+
+    function renderHistory() {
+      historyListEl.innerHTML = '';
+      const tableIDs = Object.keys(tableHistories).sort();
+
+      tableIDs.forEach(table => {
+        const logs = tableHistories[table];
+        const historyHTML = logs.map(log => {
+          const time = new Date(log.timestamp).toLocaleString();
+          return `<li>${time} - ${log.type === 'enter' ? '入店' : '退店'}（Device: ${log.device}）</li>`;
+        }).join('');
+
+        const section = `
+          <div class="p-4 bg-white rounded-lg shadow">
+            <h4 class="font-semibold mb-2">テーブル ${table}</h4>
+            <ul class="list-disc pl-5 text-sm">${historyHTML}</ul>
+          </div>
+        `;
+        historyListEl.innerHTML += section;
+      });
+    }
+  </script>
+
 </body>
 </html>
